<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpensesManager</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category:</string>
    <string name="subcategory">Subcategory:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="add">Add</string>
    <string name="enter_description">Enter description</string>
    <string name="receipt_retained">Receipt retained:</string>
    <string name="expenses">Expenses to reclaim</string>
    <string name="welcome">Welcome to your Travel Expense Manager</string>
    <string name="current">Current journey</string>

</resources>
